CoCo Tests Fixed